--- a/Exercise03/Exercise03/Exercise03.csproj
+++ b/Exercise03/Exercise03/Exercise03.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Can.cs" />
     <Compile Include="CanRack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
