--- a/Exercise03/Exercise03/Exercise03.csproj
+++ b/Exercise03/Exercise03/Exercise03.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Can.cs" />
     <Compile Include="CanRack.cs" />
+    <Compile Include="Coin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchasePrice.cs" />
