--- a/Exercise05/Exercise05/Exercise05.csproj
+++ b/Exercise05/Exercise05/Exercise05.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Can.cs" />
     <Compile Include="CanRack.cs" />
     <Compile Include="Coin.cs" />
+    <Compile Include="CoinBox.cs" />
     <Compile Include="Flavor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
